Manipulate also the C runtime's environment

Fixes fdo#33355.

Signed-off-by: Fridrich Strba <fridrich.strba@bluewin.ch>